Remove a few superfluous notes.

--- a/tex/p147.tex
+++ b/tex/p147.tex
@@ -21,7 +21,7 @@
 \vs p147 3:6 Then said Jesus to John: \textcolour{ubdarkred}{“Let us depart ere the chief priests and the scribes come upon us and take offence that we spoke words of life to these afflicted ones.”} And they returned to the temple to join their companions, and presently all of them departed to spend the night at Bethany. But John never told the other apostles of this visit of himself and Jesus to the pool of Bethesda on this Sabbath afternoon.
 \usection{4.\bibnobreakspace The Rule of Living}
 \vs p147 4:1 On the evening of this same Sabbath day, at Bethany, while Jesus, the 12, and a group of believers were assembled about the fire in Lazarus’s garden, Nathaniel asked Jesus this question: “Master, although you have taught us the positive version of the old rule of life, instructing us that we should do to others as we wish them to do to us, I do not fully discern how we can always abide by such an injunction. Let me illustrate my contention by citing the example of a lustful man who thus wickedly looks upon his intended consort in sin. How can we teach that this evil\hyp{}intending man should do to others as he would they should do to him?”
-\vs p147 4:2 When Jesus heard Nathaniel’s question, he immediately stood upon his feet and, pointing his finger at the apostle, said: “Nathaniel, Nathaniel! What manner of thinking is going on in your heart? Do you not receive my teachings as one who has been born of the spirit? Do you not hear the truth as men of wisdom and spiritual understanding? When I admonished you to do to others as you would have them do to you, I spoke to men of high ideals, not to those who would be tempted to distort my teaching into a license for the encouragement of evil\hyp{}doing.”\fnc{\ldots{}for the encouragement of \bibtextul{evil doing.} \bibexpl{While the earliest occurrences (14\ts{th} - 16\ts{th} centuries) of evil doer and evil doing are open, there has been a clear preference for the hyphenated form since the 17\ts{th} century and it is the form approved by both the OED and Webster’s. The closed form, found at three locations in the 1955 text: \bibref[159:3.9]{p0159 3:9} \bibref[188:4.3]{p0188 4:3} \bibref[188:4.5]{p0188 4:5} is, as far as we can tell, unsupported by any contemporary source. [cf evil-intending in the preceding paragraph which is essentially a coined concept and its form illustrates general \bibemph{Chicago Manual of Style} principle of hyphenating adjectival phrases prior to a noun.}}
+\vs p147 4:2 When Jesus heard Nathaniel’s question, he immediately stood upon his feet and, pointing his finger at the apostle, said: “Nathaniel, Nathaniel! What manner of thinking is going on in your heart? Do you not receive my teachings as one who has been born of the spirit? Do you not hear the truth as men of wisdom and spiritual understanding? When I admonished you to do to others as you would have them do to you, I spoke to men of high ideals, not to those who would be tempted to distort my teaching into a license for the encouragement of evil\hyp{}doing.”
 \vs p147 4:3 When the Master had spoken, Nathaniel stood up and said: “But, Master, you should not think that I approve of such an interpretation of your teaching. I asked the question because I conjectured that many such men might thus misjudge your admonition, and I hoped you would give us further instruction regarding these matters.” And then when Nathaniel had sat down, Jesus continued speaking: \textcolour{ubdarkred}{“I well know, Nathaniel, that no such idea of evil is approved in your mind, but I am disappointed in that you all so often fail to put a genuinely spiritual interpretation upon my commonplace teachings, instruction which must be given you in human language and as men must speak. Let me now teach you concerning the differing levels of meaning attached to the interpretation of this rule of living, this admonition to ‘do to others that which you desire others to do to you’:}
 \vs p147 4:4 \textcolour{ubdarkred}{“\ublistelem{1.}\bibnobreakspace \bibemph{The level of the flesh.} Such a purely selfish and lustful interpretation would be well exemplified by the supposition of your question.}
 \vs p147 4:5 \pc \textcolour{ubdarkred}{“\ublistelem{2.}\bibnobreakspace \bibemph{The level of the feelings.} This plane is one level higher than that of the flesh and implies that sympathy and pity would enhance one’s interpretation of this rule of living.}
