--- a/tex/p188.tex
+++ b/tex/p188.tex
@@ -36,9 +36,9 @@
 \usection{4.\bibnobreakspace Meaning of the Death on the Cross}
 \vs p188 4:1 Although Jesus did not die this death on the cross to atone for the racial guilt of mortal man nor to provide some sort of effective approach to an otherwise offended and unforgiving God; even though the Son of Man did not offer himself as a sacrifice to appease the wrath of God and to open the way for sinful man to obtain salvation; notwithstanding that these ideas of atonement and propitiation are erroneous, nonetheless, there are significances attached to this death of Jesus on the cross which should not be overlooked. It is a fact that Urantia has become known among other neighbouring inhabited planets as the “World of the Cross.”
 \vs p188 4:2 Jesus desired to live a full mortal life in the flesh on Urantia. Death is, ordinarily, a part of life. Death is the last act in the mortal drama. In your well\hyp{}meant efforts to escape the superstitious errors of the false interpretation of the meaning of the death on the cross, you should be careful not to make the great mistake of failing to perceive the true significance and the genuine import of the Master’s death.
-\vs p188 4:3 \pc Mortal man was never the property of the archdeceivers. Jesus did not die to ransom man from the clutch of the apostate rulers and fallen princes of the spheres. The Father in heaven never conceived of such crass injustice as damning a mortal soul because of the evil\hyp{}doing of his ancestors. Neither was the Master’s death on the cross a sacrifice which consisted in an effort to pay God a debt which the race of mankind had come to owe him.\fnc{\ldots{}because of the \bibtextul{evildoing} of his ancestors\ldots{} \bibexpl{See note for \bibref[147:4.2]{p0147 4:2}.}}
+\vs p188 4:3 \pc Mortal man was never the property of the archdeceivers. Jesus did not die to ransom man from the clutch of the apostate rulers and fallen princes of the spheres. The Father in heaven never conceived of such crass injustice as damning a mortal soul because of the evil\hyp{}doing of his ancestors. Neither was the Master’s death on the cross a sacrifice which consisted in an effort to pay God a debt which the race of mankind had come to owe him.
 \vs p188 4:4 Before Jesus lived on earth, you might possibly have been justified in believing in such a God, but not since the Master lived and died among your fellow mortals. Moses taught the dignity and justice of a Creator God; but Jesus portrayed the love and mercy of a heavenly Father.
-\vs p188 4:5 The animal nature --- the tendency toward evil\hyp{}doing --- may be hereditary, but sin is not transmitted from parent to child. Sin is the act of conscious and deliberate rebellion against the Father’s will and the Sons’ laws by an individual will creature.\fnc{\ldots{}the tendency toward \bibtextul{evildoing}\ldots{} \bibexpl{See note for \bibref[147:4.2]{p0147 4:2}.}}
+\vs p188 4:5 The animal nature --- the tendency toward evil\hyp{}doing --- may be hereditary, but sin is not transmitted from parent to child. Sin is the act of conscious and deliberate rebellion against the Father’s will and the Sons’ laws by an individual will creature.
 \vs p188 4:6 Jesus lived and died for a whole universe, not just for the races of this one world. While the mortals of the realms had salvation even before Jesus lived and died on Urantia, it is nevertheless a fact that his bestowal on this world greatly illuminated the way of salvation; his death did much to make forever plain the certainty of mortal survival after death in the flesh.
 \vs p188 4:7 Though it is hardly proper to speak of Jesus as a sacrificer, a ransomer, or a redeemer, it is wholly correct to refer to him as a \bibemph{saviour.} He forever made the way of salvation (survival) more clear and certain; he did better and more surely show the way of salvation for all the mortals of all the worlds of the universe of Nebadon.
 \vs p188 4:8 When once you grasp the idea of God as a true and loving Father, the only concept which Jesus ever taught, you must forthwith, in all consistency, utterly abandon all those primitive notions about God as an offended monarch, a stern and all\hyp{}powerful ruler whose chief delight is to detect his subjects in wrongdoing and to see that they are adequately punished, unless some being almost equal to himself should volunteer to suffer for them, to die as a substitute and in their stead. The whole idea of ransom and atonement is incompatible with the concept of God as it was taught and exemplified by Jesus of Nazareth. The infinite love of God is not secondary to anything in the divine nature.
