--- a/tex/p159.tex
+++ b/tex/p159.tex
@@ -24,7 +24,7 @@
 \vs p159 3:6 Sometime the children of the kingdom will realize that strong feelings of emotion are not equivalent to the leadings of the divine spirit. To be strongly and strangely impressed to do something or to go to a certain place, does not necessarily mean that such impulses are the leadings of the indwelling spirit.
 \vs p159 3:7 Forewarn all believers regarding the fringe of conflict which must be traversed by all who pass from the life as it is lived in the flesh to the higher life as it is lived in the spirit. To those who live quite wholly within either realm, there is little conflict or confusion, but all are doomed to experience more or less uncertainty during the times of transition between the two levels of living. In entering the kingdom, you cannot escape its responsibilities or avoid its obligations, but remember: The gospel yoke is easy and the burden of truth is light.
 \vs p159 3:8 The world is filled with hungry souls who famish in the very presence of the bread of life; men die searching for the very God who lives within them. Men seek for the treasures of the kingdom with yearning hearts and weary feet when they are all within the immediate grasp of living faith. Faith is to religion what sails are to a ship; it is an addition of power, not an added burden of life. There is but one struggle for those who enter the kingdom, and that is to fight the good fight of faith. The believer has only one battle, and that is against doubt --- unbelief.
-\vs p159 3:9 In preaching the gospel of the kingdom, you are simply teaching friendship with God. And this fellowship will appeal alike to men and women in that both will find that which most truly satisfies their characteristic longings and ideals. Tell my children that I am not only tender of their feelings and patient with their frailties, but that I am also ruthless with sin and intolerant of iniquity. I am indeed meek and humble in the presence of my Father, but I am equally and relentlessly inexorable where there is deliberate evil\hyp{}doing and sinful rebellion against the will of my Father in heaven.\fnc{\ldots{}there is deliberate \bibtextul{evildoing} and sinful rebellion\ldots{} \bibexpl{See note at \bibref[147:4.2]{p0147 4:2}.}}
+\vs p159 3:9 In preaching the gospel of the kingdom, you are simply teaching friendship with God. And this fellowship will appeal alike to men and women in that both will find that which most truly satisfies their characteristic longings and ideals. Tell my children that I am not only tender of their feelings and patient with their frailties, but that I am also ruthless with sin and intolerant of iniquity. I am indeed meek and humble in the presence of my Father, but I am equally and relentlessly inexorable where there is deliberate evil\hyp{}doing and sinful rebellion against the will of my Father in heaven.
 \vs p159 3:10 You shall not portray your teacher as a man of sorrows. Future generations shall know also the radiance of our joy, the buoyance of our good will, and the inspiration of our good humour. We proclaim a message of good news which is infectious in its transforming power. Our religion is throbbing with new life and new meanings. Those who accept this teaching are filled with joy and in their hearts are constrained to rejoice evermore. Increasing happiness is always the experience of all who are certain about God.
 \vs p159 3:11 Teach all believers to avoid leaning upon the insecure props of false sympathy. You cannot develop strong characters out of the indulgence of self\hyp{}pity; honestly endeavour to avoid the deceptive influence of mere fellowship in misery. Extend sympathy to the brave and courageous while you withhold overmuch pity from those cowardly souls who only half\hyp{}heartedly stand up before the trials of living. Offer not consolation to those who lie down before their troubles without a struggle. Sympathize not with your fellows merely that they may sympathize with you in return.
 \vs p159 3:12 \pc When my children once become self\hyp{}conscious of the assurance of the divine presence, such a faith will expand the mind, ennoble the soul, reinforce the personality, augment the happiness, deepen the spirit perception, and enhance the power to love and be loved.
