--- a/tex/title.tex
+++ b/tex/title.tex
@@ -20,6 +20,7 @@
 \tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
+\tunemarkup{pgauraone}{\fontsize{16.5}{20}\selectfont}
 THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgcrownq}{\fontsize{24}{34}\selectfont}
 \tunemarkup{pgafour}{\fontsize{24}{34}\selectfont}
@@ -28,12 +29,14 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
+\tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
 {\itshape OF}\\
 \tunemarkup{pgcrownq}{\fontsize{30}{38}\selectfont}
 \tunemarkup{pgafour}{\fontsize{32.5}{38}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
+\tunemarkup{pgauraone}{\fontsize{20}{22}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
 {\itshape\urantiapapers}\\
@@ -46,6 +49,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
+\tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
 \itshape
 The Standard Reference Text in British English\tunemarkuptwo{nofnt}{\\[2ex]}{%
 ,\\
