Adjust page size for tablet build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -343,7 +343,7 @@
 }
 
 % Google Nexus 7 (or any Android 7" colour device)
-\tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,135.5625mm}]{geometry}}
+\tunemarkup{pgnexus7}{\RequirePackage[dvips,headheight=19pt,headsep=4pt,vmargin={0.2in,0.15in},hmargin={0.07in},twoside=true,papersize={90.0mm,160mm}]{geometry}}
 
 % Amazon Kindle DX
 \tunemarkup{pgkindledx}{\RequirePackage[dvips,headheight=30pt,headsep=7pt,vmargin={0.27in,0.2in},hmargin={0.08in},twoside=true,papersize={140mm,203mm}]{geometry}}
@@ -684,36 +684,36 @@
      \put(42,-57){\botr}
    \end{picture}%
 }%
-\tunemarkup{pgnexus7}{%
-\setlength{\unitlength}{6.56pt}%
-\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
-   \begin{picture}(0,0)(1.6,-55.9)%
-     % top left corner
-     \put(0,0){\topl}
-     % top plank
-     \multiput(1,0)(4,0){9}{\topplank}
-     % top right corner
-     \put(36,0){\topprer}
-     \put(37,0){\topr}
-     % right plank
-     \multiput(37,-1)(0,-4){14}{\hr}
-     \multiput(37,-2)(0,-4){14}{\hhr}
-     \multiput(37,-3)(0,-4){14}{\hhhr}
-     \multiput(37,-4)(0,-4){14}{\hhhhr}
-     % left plank
-     \multiput(0,-1)(0,-4){14}{\hhhhl}
-     \multiput(0,-2)(0,-4){14}{\hl}
-     \multiput(0,-3)(0,-4){14}{\hhl}
-     \multiput(0,-4)(0,-4){14}{\hhhl}
-     % bottom left corner
-     \put(0,-57){\botl}
-     % bottom plank
-     \multiput(1,-57)(4,0){9}{\botplank}
-     % bottom right corner
-     \put(36,-57){\botprer}
-     \put(37,-57){\botr}
-   \end{picture}%
-}%
+%\tunemarkup{pgnexus7}{%
+%\setlength{\unitlength}{6.56pt}%
+%\fontsize{\unitlength}{\unitlength}\usefont{U}{webo}{xl}{n}
+%   \begin{picture}(0,0)(1.6,-55.9)%
+%     % top left corner
+%     \put(0,0){\topl}
+%     % top plank
+%     \multiput(1,0)(4,0){9}{\topplank}
+%     % top right corner
+%     \put(36,0){\topprer}
+%     \put(37,0){\topr}
+%     % right plank
+%     \multiput(37,-1)(0,-4){14}{\hr}
+%     \multiput(37,-2)(0,-4){14}{\hhr}
+%     \multiput(37,-3)(0,-4){14}{\hhhr}
+%     \multiput(37,-4)(0,-4){14}{\hhhhr}
+%     % left plank
+%     \multiput(0,-1)(0,-4){14}{\hhhhl}
+%     \multiput(0,-2)(0,-4){14}{\hl}
+%     \multiput(0,-3)(0,-4){14}{\hhl}
+%     \multiput(0,-4)(0,-4){14}{\hhhl}
+%     % bottom left corner
+%     \put(0,-57){\botl}
+%     % bottom plank
+%     \multiput(1,-57)(4,0){9}{\botplank}
+%     % bottom right corner
+%     \put(36,-57){\botprer}
+%     \put(37,-57){\botr}
+%   \end{picture}%
+%}%
 \endgroup
 }
 
