--- a/tex/title.tex
+++ b/tex/title.tex
@@ -95,7 +95,7 @@ The latest version of this book can be downloaded from:\\
 Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
 		\tunemarkuptwo{nofnt}{}{The apparatus (marked with a circle\r{} in the text) contains all significant changes made since the 1955 first edition.\\}
 		The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note other than a textual variant.\\[5pt]}
-\tux\ Typeset with \XeLaTeX\ under Linux.\\
+\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
 \upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
