Tidy up 6" build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -7,10 +7,10 @@
 \def\tunemarkuptwo#1#2#3{\@ifundefined{tune@markup@#1}{#3}{#2}}
 
 % various page sizes
-%\tunemarkuptag{pghanlin}
+\tunemarkuptag{pghanlin}
 %\tunemarkuptag{pgnexus7}
 %\tunemarkuptag{pgkoboaurahd}
-\tunemarkuptag{pgauraone}
+%\tunemarkuptag{pgauraone}
 %\tunemarkuptag{pgafour}
 %\tunemarkuptag{pgcrownq}
 %\tunemarkuptag{pgkindledx}
@@ -20,7 +20,7 @@
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}\tunemarkup{pgafour}{doublecol,}\tunemarkup{pgcrownq}{doublecol,}parvs]{ubook}
 
 % various font families
-\tunemarkuptag{garamond}
+%\tunemarkuptag{garamond}
 %\tunemarkuptag{goudy}
 %\tunemarkuptag{minionpro}
 %\tunemarkuptag{academy}
@@ -28,7 +28,7 @@
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
-%\tunemarkuptag{arno}
+\tunemarkuptag{arno}
 %\tunemarkuptag{century}
 %\tunemarkuptag{cambria}
 %\tunemarkuptag{agora}
@@ -947,6 +947,9 @@
 \newcommand{\bibsectitlefont}{\fontsize{8}{9}\selectfont}
 \renewcommand{\footnotesize}{\fontsize{14}{16}\selectfont}
 \setlength{\minitocafterskip}{-1.5ex}
+\renewcommand{\footnotesize}{\fontsize{14}{17}\selectfont}
+\renewcommand{\bibbookend}{\fontsize{16}{19}\selectfont}
+\renewcommand{\urantiamainfontsize}{16/19}
 }
 
 \tunemarkup{pgkoboaurahd}{%
