Add a note about Tycho's Supernova SN 1572

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -24,7 +24,7 @@
 \vs p041 3:2 The suns of Nebadon are not unlike those of other universes. The material composition of all suns, dark islands, planets, and satellites, even meteors, is quite identical. These suns have an average diameter of about $1.6\times 10^6$\,km, that of your own solar orb being slightly less\fnst{\textbf{slightly less}, Our own ``solar orb'' has an average diameter of $1.392684 \times 10^6$\,km.}. The largest star in the universe, the stellar cloud Antares, is 450 times the diameter of your sun\fnst{\textbf{Antares, is 450 times the diameter of your sun}, According to the present astronomical data for Antares, its diameter (measured by parallax and observed angular diameter) is 800 times that of our sun.} and is 60,000,000 times its volume\fnst{\textbf{60,000,000 times its volume}, There is an apparent contradiction here, as long as the shape of Antares is assumed to be spherical and its volume calculated according to the formula of Euclidean geometry: ${V_{Antares}/V_{\odot}} = {R^3_{Antares}/R^3_{\odot}} = 450^3 = 91,125,000 \neq 60,000,000$. Antares, being a Class M supergiant with the mass of $15.5 M_{\odot}$, has a density far too low to account for the contribution from the space curvature according to the General Relativity, thus implying a non-spherical (ellipsoid) shape.}. But there is abundant space to accommodate all of these enormous suns. They have just as much comparative elbow room in space as one dozen oranges would have if they were circulating about throughout the interior of Urantia, and were the planet a hollow globe.
 \vs p041 3:3 \pc When suns that are too large are thrown off a nebular mother wheel, they soon break up or form double stars. All suns are originally truly gaseous, though they may later transiently exist in a semiliquid state. When your sun attained this quasi\hyp{}liquid state of supergas pressure, it was not sufficiently large to split equatorially, this being one type of double star formation.
 \vs p041 3:4 When less than \bibfrac{1}{10}\ts{th} the size of your sun, these fiery spheres rapidly contract, condense, and cool. When upwards of 30 times its size --- rather 30 times the gross content of actual material --- suns readily split into two separate bodies, either becoming the centres of new systems or else remaining in each other’s gravity grasp and revolving about a common centre as one type of double star.
-\vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572. This conflagration was so intense that the explosion was clearly visible in broad daylight.
+\vs p041 3:5 \pc The most recent of the major cosmic eruptions in Orvonton was the extraordinary double star explosion, the light of which reached Urantia in A.D.\,1572.\fnst{\textbf{A.D.\,1572}, The supernova SN\,1572 appeared in early November 1572 is known as ``Tycho's supernova'', because in 1573 Tycho Brahe published both his own observations and the analysis of sightings of others. In England, Queen Elizabeth summoned Thomas Allen the mathematician to have his advice about the new Star that appeared in the Cassiopeia. In China, the star was interpreted as an evil omen for the young Wanli Emperor, which, however did not prevent him reigning for the next 48 years.} This conflagration was so intense that the explosion was clearly visible in broad daylight.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Tycho-Supernova.jpg}\caption{X-ray image of SN\,1572, Chandra X-ray Observatory.}\end{figure}}
 \vs p041 3:6 \pc Not all stars are solid, but many of the older ones are. Some of the reddish, faintly glimmering stars have acquired a density at the centre of their enormous masses which would be expressed by saying that 1 cm\ts{3} of such a star, if on Urantia, would weigh 166\,kg. The enormous pressure, accompanied by loss of heat and circulating energy, has resulted in bringing the orbits of the basic material units closer and closer together until they now closely approach the status of electronic condensation. This process of cooling and contraction may continue to the limiting and critical explosion point of ultimatonic condensation.
 \vs p041 3:7 Most of the giant suns are relatively young; most of the dwarf stars are old, but not all. The collisional dwarfs may be very young and may glow with an intense white light, never having known an initial red stage of youthful shining. Both very young and very old suns usually shine with a reddish glow. The yellow tinge indicates moderate youth or approaching old age, but the brilliant white light signifies robust and extended adult life.
 \vs p041 3:8 \pc While all adolescent suns do not pass through a pulsating stage, at least not visibly, when looking out into space you may observe many of these younger stars whose gigantic respiratory heaves require from 2 to 7 days to complete a cycle. Your own sun still carries a diminishing legacy of the mighty upswellings of its younger days, but the period has lengthened from the former 3½ day pulsations to the present 11½ year sunspot cycles.
