Add a note on the Sun's temperature

--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -54,10 +54,10 @@
 \vs p041 6:4 Calcium is an active and versatile element at solar temperatures. The stone atom has two agile and loosely attached electrons in the two outer electronic circuits, which are very close together. Early in the atomic struggle it loses its outer electron; whereupon it engages in a masterful act of juggling the 19\ts{th} electron back and forth between the 19\ts{th} and 20\ts{th} circuits of electronic revolution. By tossing this 19\ts{th} electron back and forth between its own orbit and that of its lost companion more than 25,000 times a second, a mutilated stone atom is able partially to defy gravity and thus successfully to ride the emerging streams of light and energy, the sunbeams, to liberty and adventure. This calcium atom moves outward by alternate jerks of forward propulsion, grasping and letting go the sunbeam about 25,000 times each second. And this is why stone is the chief component of the worlds of space. Calcium is the most expert solar\hyp{}prison escaper.
 \vs p041 6:5 The agility of this acrobatic calcium electron is indicated by the fact that, when tossed by the temperature\hyp{}X\hyp{}ray solar forces to the circle of the higher orbit, it only remains in that orbit for about $10^{-6}$ seconds; but before the electric\hyp{}gravity power of the atomic nucleus pulls it back into its old orbit, it is able to complete 1,000,000 revolutions about the atomic centre.
 \vs p041 6:6 \pc Your sun has parted with an enormous quantity of its calcium, having lost tremendous amounts during the times of its convulsive eruptions in connection with the formation of the solar system. Much of the solar calcium is now in the outer crust of the sun.
-\vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 3,300\,°C, this temperature being very favourable to the registry of the iron spectrum.
+\vs p041 6:7 \pc It should be remembered that spectral analyses show only sun\hyp{}surface compositions. For example: Solar spectra exhibit many iron lines, but iron is not the chief element in the sun. This phenomenon is almost wholly due to the present temperature of the sun’s surface, a little less than 3,300\,°C\fnst{\textbf{3,300\,°C}, See the note at \bibref[41:6.7]{p041 6:7}.}, this temperature being very favourable to the registry of the iron spectrum.
 \usection{7.\bibnobreakspace Sources of Solar Energy}
 \vs p041 7:1 The internal temperature of many of the suns, even your own, is much higher than is commonly believed. In the interior of a sun practically no whole atoms exist; they are all more or less shattered by the intensive X\hyp{}ray bombardment which is indigenous to such high temperatures. Regardless of what material elements may appear in the outer layers of a sun, those in the interior are rendered very similar by the dissociative action of the disruptive X\hyp{}rays. X\hyp{}ray is the great leveler of atomic existence.
-\vs p041 7:2 The surface temperature of your sun is almost 3,300\,°C, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 19,500,000\,°C in the central regions. (All of these temperatures refer to your Celsius scale.)
+\vs p041 7:2 The surface temperature of your sun is almost 3,300\,°C\fnst{\textbf{3,300\,°C}, The American original text says ``6,000 degrees'' and specifies that it refers to our Fahrenheit scale. However, the number 6,000 is clearly taken from p.\,14 of A.S.~Eddington's ``Stars and Atoms'', where it refers to our Celsius scale (p.4 ibid). Therefore, the modern estimates of the temperature of our Sun's photosphere (5,778\,K) are likely to be in agreement with the value given in this Revelation.}, but it rapidly increases as the interior is penetrated until it attains the unbelievable height of about 19,500,000\,°C in the central regions. (All of these temperatures refer to your Celsius scale.)
 \vs p041 7:3 \pc All of these phenomena are indicative of enormous energy expenditure, and the sources of solar energy, named in the order of their importance, are:
 \vs p041 7:4 \ublistelem{1.}\bibnobreakspace Annihilation of atoms and, eventually, of electrons.
 \vs p041 7:5 \ublistelem{2.}\bibnobreakspace Transmutation of elements, including the radioactive group of energies thus liberated.
